--- a/src/assets/scss/section-about.scss
+++ b/src/assets/scss/section-about.scss
@@ -1,5 +1,6 @@
 .section-wrapper {
-    width: calc(100vw - 120px);
+    width: 100%;
+    // width: calc(100vw - 120px);
     height: 100vh;
     background-size: cover;
     background-image: url(../images/back-down.jpg);
