--- a/src/assets/scss/section-main.scss
+++ b/src/assets/scss/section-main.scss
@@ -4,7 +4,8 @@
     align-items: center;
     justify-content: flex-start;
     z-index: 10;
-    width: calc(100vw - 120px);
+    width: 100%;
+    // width: calc(100vw - 120px);
     height: 100vh; 
     background-size: cover;
     background-position: center;
